[project]
name = "comfyui-anytext"
description = "Unofficial implementation of AnyText for ComfyUI（EXP）"
version = "1.0.0"
license = "LICENSE"
dependencies = ["modelscope", "Pillow==9.5.0"]

[project.urls]
Repository = "https://github.com/ZHO-ZHO-ZHO/ComfyUI-AnyText"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-AnyText"
Icon = ""
